[feat #167] 질문 게시글 작성 로직 변경 (#168)
* [feat] 게시글 작성시 회원 크레딧 감소

- 게시글 등록 시점에서 요청자의 크레딧을 감소시킨다.
- 영속성 컨텍스트에 의해 관리되지 않는 회원 엔티티의 변경 사항을 반영하기 위해서 save()를 호출하여 flush() 처리.

* [feat] 게시글 상태 필드 enum 작성

- 게시글을 관리할 상태 필드값 Enum 작성
- 답변 대기(14일 이전 답변 없음), 답변 마감(14일 이후로도 답변없음), 채택 대기(답변 있음), 채택 완료(채택 완료)

* [feat] 게시글 상태 필드 추가

- 게시글 상태 필드 추가
- 게시글 생성자 호출 시 '답변대기'를 기본 값으로 초기화

* [feat] 게시글 상태 필드 관련 에러코드 추가

* [feat] 게시글 작성 API ResponseDto 게시글 상태 필드 추가

* [feat] 게시글 상세 조회 응답 DTO 상태 필드 추가

* [feat] 질문글 상태 필드 업데이트 메서드 추가

* [feat] 답변에 따른 질문글 상태 필드 업데이트

- 답변 등록 시 질문글 상태를 '채택대기'로 변경한다.
- 답변 채택 시 질문글 상태를 '채택완료'로 변경한다.
- 답변 채택 시 질문글 작성자의 크레딧 인출 로직을 제거한다.(작성 시 인출 변경에 따른 조치)

* [fix] 답변 등록에 따른 질문글 상태 필드 업데이트

- 답변 등록 시 질문글 상태가 '답변대기'일 때만 '채택대기'로 변경한다.

* [test] 답변에 따른 질문글 상태 변경 단위테스트 추가

* [test] 질문글 작성자 크레딧 차감 시점 변경에 따른 실패 테스트케이스 disable 처리

* [refactor] 질문글 작성자 크레딧 차감시점 변경에 따른 답변채택 크레딧 내역저장 로직 리팩토링

* [test] 답변채택 크레딧 내역저장 로직 리팩토링에 따른 단위테스트 변경

* [feat] 질문글 작성, 질문글 환급 크레딧 타입 추가

* [feat] 질문글 작성 크레딧 내역 저장 추가

* [feat] 질문글 작성 시 크레딧 내역 저장 호출

* [test] 크레딧 채택 출금 타입 -> 질문글 작성 타입 변경

* [fix] 입/출금 1개 타입만 조회되는 오류 수정

* [test] 질문글 상태 필드 추가에 따른 단위테스트 추가

* [feat] 환불 질문글 DTO 추가

* [feat] 환불 질문글 스케줄러 queryDSL 추가

* [feat] 환불 질문글 스케줄러 추가

* [feat] 환불 질문글 스케줄러 로직 추가

* [feat] 답변 등록 에러코드 추가

* [feat] 질문글 답변마감 상태 검증하는 메서드 추가

* [test] 질문글 답변마감 상태일 때 답변을 등록하면 예외가 발생하는 단위테스트 검증

* [feat] 환불된 질문글 크레딧 내역 저장 로직 추가

* [feat] 환불된 질문글 크레딧 내역 저장 로직 추가

* [feat] 벌크 연산 후 동기화를 위한 트랜잭션 추가

* [refactor] 환불 질문들 querydsl 리팩토링

* [test] 환불 질문글 Repository 테스트 추가

* [test] 환급 질문글 Repository 테스트 오류 해결

* [test] CreditHistoryRespository Mock 추가

* [test] 질문글 등록 시 크레딧 내역 mocking 추가하여 에러 해결

* [fix] 중복 에러코드 수정

* [style] 답변 등록 관련 에러 네이밍 변경

* [refactor] Collectors.toList() -> Stream.toList() 변경

* [rename] 질문글 마감 스케쥴링 메서드 네이밍 변경

* [style] 답변 마감 상태 업데이트 메서드 쿼리 네이밍 변경

* [style] 답변마감 상태 확인 메서드 네이밍 변경

* [feat] 답변 대기 상태 확인 메서드 추가
